@@ -189,11 +189,13 @@ mb_panel_applet_create (const char    *id,
         button = gtk_toggle_button_new ();
         applet->button = GTK_TOGGLE_BUTTON (button);
 
+	gtk_button_set_relief (GTK_BUTTON(button), GTK_RELIEF_NONE);
+
         GTK_WIDGET_UNSET_FLAGS (button, GTK_CAN_FOCUS);
 
         gtk_widget_set_name (button, "MatchboxPanelShowDesktop");
 
-        image = mb_panel_scaling_image_new ("gnome-fs-desktop");
+        image = mb_panel_scaling_image_new ("desktop");
         gtk_container_add (GTK_CONTAINER (button), image);
 
         g_signal_connect (button,
