@@ -1,3 +1,12 @@
+2007-01-23  Matthew Allum  <mallum@openedhand.com>
+
+	* applets/showdesktop/showdesktop.c:
+	Use a 'simpler' named icon and dont draw a frame around it.	
+
+	* matchbox-panel/mb-panel.c: 
+	Be a bit more informative when an applet cant be loaded.
+	(via mickeyl)
+
 2006-12-22  Matthew Allum  <mallum@openedhand.com>
 
 	* matchbox-panel/mb-panel.c: 
